# numc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  listafuncoes.c  numc.pc.in
demo/: CMakeLists.txt
demo/chart/: CMakeLists.txt  line.c
include/: a.h.in  a.h.py.in  aheader.h  aobj.h  macro.h  ncz.h  numc.h  type.h  util.h
include/nc/: chart.h  core.h  img.h  numc.h
include/nc/chart/: chart.h  cline.h  cwindow.h  line.h
include/nc/core/: a.h.py.in  aheader.h  aobj.h  macro.h  ncz.h  type.h  util.h  wfm.h
include/nc/img/: io.h
lib/: CMakeLists.txt  download_libs.sh
rsc/: pattern.pgm
src/: CMakeLists.txt  a.c.in  a.c.py.in  ncz.c  numc.c
src/chart/: CMakeLists.txt  chart.c  line.c
src/core/: CMakeLists.txt  a.c.py.in  ncz.c  util.c  wfm.c
src/img/: CMakeLists.txt  io.c
test/: CMakeLists.txt  test.h  test_au8_basic.c  test_au8_creation.c  test_au8_creation_constants.c  test_au8_creation_data.c  test_au8_creation_new.c  test_au8_manipulation_elemwise_op.c  test_au8_manipulation_get.c  test_au8_manipulation_set.c  test_au8_new.c  test_au8_new_nd.c  test_au8_zeros_ones.c
test/chart/: test_line.c
test/core/: test_wfm.c
test/img/: test_io.c
