set(TESTS_AU8_CREATION au8_creation_new au8_creation_constants au8_creation_data)
set(TESTS_AU8_MANIPULATION au8_manipulation_set au8_manipulation_elemwise_op au8_manipulation_get)
set(TESTS_AU8 ${TESTS_AU8_CREATION} ${TESTS_AU8_MANIPULATION})
set(TESTS ${TESTS_AU8})
foreach(TEST ${TESTS})
  add_executable(test_${TEST} test_${TEST}.c)
  target_link_libraries(test_${TEST} numc_core unity gcov ${ZLIB_LIBRARIES})
  add_test(NAME test_${TEST} COMMAND test_${TEST})
endforeach()

add_executable(test_img_io img/test_io.c)
target_link_libraries(test_img_io numc_core numc_img unity gcov ${ZLIB_LIBRARIES})
add_test(NAME test_img_io COMMAND test_img_io)

add_executable(test_core_wfm core/test_wfm.c)
target_link_libraries(test_core_wfm numc_core numc_img unity gcov ${ZLIB_LIBRARIES})
add_test(NAME test_core_wfm COMMAND test_core_wfm)
